--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				</div>
 				<div class="back" id="back1">
 					<div class="school-projects-short">
-						<h5> An overview of some of the interesting projects I have worked on while pursuing my undergraduate education at UC Berkeley. </h5>
+						<h5> An overview of some of the interesting projects I have worked on while pursuing my undergraduate education at UC Berkeley. Click to find out more! </h5>
 					</div>
 					<div class="school-projects-long" style= "display:none;">
 						<div class="project-tab">
@@ -143,7 +143,7 @@
 				</div>
 				<div class="back">
 					<div class="side-projects-short">
-						<h5> An overview of some of the projects I have been working on outside of school. </h5>
+						<h5> An overview of some of the projects I have been working on outside of school. Click to find out more! </h5>
 					</div>
 					<div class="side-projects-long" style="display:none;">
 						<div class="project-tab">
@@ -208,7 +208,7 @@
 				</div>
 				<div class="back">
 					<div class="art-short">
-						<h5> Some of the art pieces I have produced over the years. </h5>
+						<h5> Some of the art pieces I have produced over the years. Click to see more! </h5>
 					</div>
 					<div class="art-long" style="display:none;">
 						<div class="drawing1">
